--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,4 +36,4 @@ steps:
       **\*test*.dll
       !**\*TestAdapter.dll
       !**\obj\**
-    searchFolder: '$(System.DefaultWorkingDirectory)\bin\$(buildConfiguration)'
+    searchFolder: '$(System.DefaultWorkingDirectory)\**\bin\$(buildConfiguration)'
